--- a/design.css
+++ b/design.css
@@ -24,6 +24,9 @@ body{
         overflow-x: hidden;
     }
 }
+.hidden{
+    overflow-y: hidden;
+}
 
 .primary-nav{
     display: flex;
@@ -77,11 +80,11 @@ body{
         opacity: 0; 
         flex-direction: column;
         position: fixed;
-        gap: 4rem;
+        gap: 3rem;
         top: 0%;
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         align-items: center;
         justify-content: center;
         background-color: #fff;
